--- a/app/views/appellant-submission/v11/full/appeal-site/agricultural-holdings.html
+++ b/app/views/appellant-submission/v11/full/appeal-site/agricultural-holdings.html
@@ -38,6 +38,9 @@
               classes: "govuk-fieldset__legend--l"
             }
           },
+          hint: {
+            text: "An agricultural holding is land that has an agricultural tenant."
+          },
           items: [
             {
               value: "Yes",
