AS-3996 Typo on agricultural holdings question

--- a/app/views/appellant-submission/v11/full/appeal-site/agricultural-holdings-tell-tenants.html
+++ b/app/views/appellant-submission/v11/full/appeal-site/agricultural-holdings-tell-tenants.html
@@ -32,7 +32,7 @@
 
           <h1 class="govuk-heading-l">Telling the other tenants</h1>
           <p class="govuk-body">You must have told all the other tenants about your appeal.</p>
-          <p class="govuk-body">You must have done this within the last 21 days using a copy of the <a href="javascript:preventDefault();">form in annexe 2a of the 'making your appeal' guidance</a>.</p>
+          <p class="govuk-body">You must have done this within the last 21 days using a copy of the <a href="javascript:preventDefault();">form in Annexe 2a of the 'making your appeal' guidance</a>.</p>
 
           <h2 class="govuk-heading-m">Confirm that you've told the other tenants</h2>
           <p class="govuk-body">I confirm that:</p>
@@ -52,9 +52,9 @@
                 checked: checked("appealsub-"+version+"-appealsite-agriculturalholdings-toldtenants", "I've done this within the last 21 days")
               },
               {
-                value: "I used a copy of the form in annexe 2a",
-                text: "I used a copy of the form in annexe 2a",
-                checked: checked("appealsub-"+version+"-appealsite-agriculturalholdings-toldtenants", "I used a copy of the form in annexe 2a")
+                value: "I used a copy of the form in Annexe 2a",
+                text: "I used a copy of the form in Annexe 2a",
+                checked: checked("appealsub-"+version+"-appealsite-agriculturalholdings-toldtenants", "I used a copy of the form in Annexe 2a")
               }
             ]
           }) }}
@@ -63,7 +63,7 @@
 
           <h1 class="govuk-heading-l">Telling the tenants</h1>
           <p class="govuk-body">You must have told all the tenants about your appeal.</p>
-          <p class="govuk-body">You must have done this within the last 21 days using a copy of the <a href="javascript:preventDefault();">form in annexe 2a of the 'making your appeal' guidance</a>.</p>
+          <p class="govuk-body">You must have done this within the last 21 days using a copy of the <a href="javascript:preventDefault();">form in Annexe 2a of the 'making your appeal' guidance</a>.</p>
 
           <h2 class="govuk-heading-m">Confirm that you've told the tenants</h2>
           <p class="govuk-body">I confirm that:</p>
@@ -83,9 +83,9 @@
                 checked: checked("appealsub-"+version+"-appealsite-agriculturalholdings-toldtenants", "I've done this within the last 21 days")
               },
               {
-                value: "I used a copy of the form in annexe 2a",
-                text: "I used a copy of the form in annexe 2a",
-                checked: checked("appealsub-"+version+"-appealsite-agriculturalholdings-toldtenants", "I used a copy of the form in annexe 2a")
+                value: "I used a copy of the form in Annexe 2a",
+                text: "I used a copy of the form in Annexe 2a",
+                checked: checked("appealsub-"+version+"-appealsite-agriculturalholdings-toldtenants", "I used a copy of the form in Annexe 2a")
               }
             ]
           }) }}
