Environmental impact questions
Still one question outstanding regarding notifying and consulting

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -398,14 +398,23 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (XXX)
+                        Jira Tickets (12)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list-bulleted">
-                        <!--li><a href="https://pins-ds.atlassian.net/browse/AS-2636">AS-2636</a> - How the LPA access Questionnaire</li>
-                        <li><a href="https://pins-ds.atlassian.net/browse/AS-2858">AS-2858</a> - Add Supplementary planning to Check Your Answers page on LPA Questionnaire</li>
-                        <li><a href="https://pins-ds.atlassian.net/browse/AS-2986">AS-2986</a> - Health and Safety Question to be added</li-->
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3803">AS-3803 - Capture LPA's view on choice of procedure</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3809">AS-3809 - Updates to existing HAS LPA Questionniare questions</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3810">AS-3810 - Capture additional information about the appeal site</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3811">AS-3811 - Capture whether appeal concerns people claiming Gypsy/Traveller status</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3812">AS-3812 - Capture whether development would require stopping up or diverting of public right of way</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3813">AS-3813 - Capture whether development would require demolition, alteration or extension of a listed building</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3814">AS-3814 - Capture whether development would affect an Ancient Monument</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3815">AS-3815 - Capture whether any part of the appeal site is subject to a Tree Preservation Order</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3816">AS-3816 - Capture whether development would affect any protected species</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3817">AS-3817 - Capture information relating to Environmental Impact of the proposed development</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3818">AS-3818 - LPA supporting documents</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3995">AS-3995 - Questionnaire task list / access to questions</a></li>
                       </ul>
                     </div>
                   </details>
