--- a/app/views/lpa-questionnaire/fullv1/task-list.html
+++ b/app/views/lpa-questionnaire/fullv1/task-list.html
@@ -92,8 +92,8 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="environmental-impact/xxx" class="govuk-link">
-                  Tell us about the environmental impact
+                <a href="environmental-impact/schedule" class="govuk-link">
+                  Tell us about the development's environmental impact
                 </a>
               </span>
               {% if data["lpaq-"+version+"-taskliststatus-environmentalimpact"] == "Complete" %}
