Your decision questions

--- a/app/views/lpa-questionnaire/fullv1/task-list.html
+++ b/app/views/lpa-questionnaire/fullv1/task-list.html
@@ -107,7 +107,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="your-decision/xxx" class="govuk-link">
+                <a href="your-decision/planning-officers-report" class="govuk-link">
                   Provide details about your decision
                 </a>
               </span>
