Interested parties questions

--- a/app/views/lpa-questionnaire/fullv1/task-list.html
+++ b/app/views/lpa-questionnaire/fullv1/task-list.html
@@ -122,7 +122,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="interested-parties/xxx" class="govuk-link">
+                <a href="interested-parties/publicise-application" class="govuk-link">
                   Tell us how you've informed interested parties
                 </a>
               </span>
