--- a/app/views/lpa-questionnaire/fullv1/task-list.html
+++ b/app/views/lpa-questionnaire/fullv1/task-list.html
@@ -137,7 +137,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="representations/xxx" class="govuk-link">
+                <a href="representations/which-parties" class="govuk-link">
                   Upload representations from interested parties
                 </a>
               </span>
