Site access questions

--- a/app/views/lpa-questionnaire/fullv1/task-list.html
+++ b/app/views/lpa-questionnaire/fullv1/task-list.html
@@ -167,7 +167,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="site-access/xxx" class="govuk-link">
+                <a href="site-access/public-land" class="govuk-link">
                   Tell us about site access
                 </a>
               </span>
@@ -182,7 +182,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="site-access/xxx" class="govuk-link">
+                <a href="procedure-type/decide" class="govuk-link">
                   Recommend a procedure type
                 </a>
               </span>
