Procedure type questions

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -393,6 +393,10 @@
                     <li>
                       <a href="/lpa-questionnaire/fullv1/task-list" title="">Start journey from task list</a>
                     </li>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv1/skip/simplest-cya" title="">Start from check your answers (simplest answers)</a>
+                    </li>
+                    
                     <!--li><a href="/lpa-questionnaire/fullv1/jump/tasks-complete" class="govuk-link">Jump to Check You Answers</a></li-->
                   </ul>
                   <details class="govuk-details" data-module="govuk-details">
