--- a/app/views/lpa-questionnaire/fullv1/task-list.html
+++ b/app/views/lpa-questionnaire/fullv1/task-list.html
@@ -1,7 +1,7 @@
 {% extends "layouts/lpa-questionnaire/fullv1.html" %}
 
 {% block pageTitle %}
-  Provide information for a householder planning appeal
+  Full planning appeal questionnaire - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -182,7 +182,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="procedure-type/decide" class="govuk-link">
+                <a href="procedure-type/decided-by" class="govuk-link">
                   Recommend a procedure type
                 </a>
               </span>
@@ -208,7 +208,7 @@
                   and data["lpaq-"+version+"-taskliststatus-proceduretype"] == "Complete"
                 %}
                   <span class="app-task-list__task-name">
-                    <a href="/lpa-questionnaire/{{version}}/goto-check-your-answers" class="govuk-link">
+                    <a href="/lpa-questionnaire/{{version}}/check-your-answers" class="govuk-link">
                       Check your answers and submit
                     </a>
                   </span>
