Fixes from red comments in Miro

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -396,6 +396,9 @@
                     <li>
                       <a href="/lpa-questionnaire/fullv1/skip/simplest-cya" title="">Start from check your answers (simplest answers)</a>
                     </li>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv1/skip/complex-cya" title="">Start from check your answers (complex answers)</a>
+                    </li>
                     
                     <!--li><a href="/lpa-questionnaire/fullv1/jump/tasks-complete" class="govuk-link">Jump to Check You Answers</a></li-->
                   </ul>
