--- a/app/views/lpa-questionnaire/fullv1/proposed-development/traveller.html
+++ b/app/views/lpa-questionnaire/fullv1/proposed-development/traveller.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv1.html" %}
 
 {% block pageTitle %}
-  Does the development relate to someone claiming Gypsy or Traveller status? - Tell us about the proposed development - {{serviceName}} - GOV.UK
+  Does the development relate to anyone claiming to be a Gypsy or Traveller? - Tell us about the proposed development - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -34,7 +34,7 @@
           name: "lpaq-"+version+"-proposeddevelopment-traveller",
           fieldset: {
             legend: {
-              text: "Does the development relate to someone claiming Gypsy or Traveller status?",
+              text: "Does the development relate to anyone claiming to be a Gypsy or Traveller?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--xl"
             }
