--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/protected-species-consultation.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/protected-species-consultation.html
@@ -2,7 +2,7 @@
 {% extends "layouts/lpa-questionnaire/fullv1.html" %}
 
 {% block pageTitle %}
-  Upload Natural England's consultation response - Tell us about the surrounding area - {{serviceName}} - GOV.UK
+  Upload Natural England's advice - Tell us about the surrounding area - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,7 +29,7 @@
           Tell us about the surrounding area
         </span>
         <h1 class="govuk-heading-xl">
-          Upload Natural England's consultation response
+          Upload Natural England's advice
         </h1>
         <p class="govuk-body">
           Upload Natural England's comments or details. This should include the extracts from protected species standing advice that have been considered.
