--- a/app/views/lpa-questionnaire/fullv1/task-list.html
+++ b/app/views/lpa-questionnaire/fullv1/task-list.html
@@ -183,7 +183,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="procedure-type/decided-by" class="govuk-link">
-                  Recommend a procedure type
+                  Review the procedure type
                 </a>
               </span>
               {% if data["lpaq-"+version+"-taskliststatus-proceduretype"] == "Complete" %}
