Check your answers and confirmation

--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/protected-species-consultation.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/protected-species-consultation.html
@@ -32,17 +32,17 @@
           Upload Natural England's advice
         </h1>
         <p class="govuk-body">
-          Upload Natural England's comments or details. This should include the extracts from protected species standing advice that have been considered.
+          Upload the extracts you considered from the protected species standing advice, or Natural England's comments.
         </p>
         
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-surroundingarea-sssi-consultation-upload">
+          <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-surroundingarea-protectedspecies-consultation">
             Upload files
           </label>
           <p class="govuk-body">
             Drag and drop files or select "choose files"
           <p>
-          <input class="govuk-file-upload pins-file-upload-multiple" id="lpaq-{{version}}-surroundingarea-sssi-consultation-upload" name="lpaq-{{version}}-surroundingarea-sssi-consultation-upload" type="file" multiple>
+          <input class="govuk-file-upload pins-file-upload-multiple" id="lpaq-{{version}}-surroundingarea-protectedspecies-consultation" name="lpaq-{{version}}-surroundingarea-protectedspecies-consultation" type="file" multiple>
         </div>
 
         {{ govukInsetText({
