Emails, magic link, and side bar info

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -387,12 +387,20 @@
                     Full planning LPA questionnaire - Version 1
                   </h3>
                   <ul class="govuk-list govuk-list--bullet">
-                    <!--li>
-                      <a href="/lpa-questionnaire/fullv1/email/started" title="">Start journey from 'Full planning appeal started' email</a>
-                    </li-->
+                    <li>
+                      <a href="/lpa-questionnaire/fullv1/email/started-refusal" title="">Start from email - Appeal against the refusal of planning application</a>
+                    </li>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv1/email/started-granted" title="">Start from email - Appeal against conditions for the granted planning application</a>
+                    </li>
+                    <li>
+                      <a href="/lpa-questionnaire/fullv1/email/started-non-determination" title="">Start from email - Appeal against the non-determination planning application</a>
+                    </li>
+                    <br>
                     <li>
                       <a href="/lpa-questionnaire/fullv1/task-list" title="">Start journey from task list</a>
                     </li>
+                    <br>
                     <li>
                       <a href="/lpa-questionnaire/fullv1/skip/simplest-cya" title="">Start from check your answers (simplest answers)</a>
                     </li>
