--- a/app/views/lpa-questionnaire/fullv1/confirmation.html
+++ b/app/views/lpa-questionnaire/fullv1/confirmation.html
@@ -39,6 +39,10 @@
       <p class="govuk-body">
         We'll review your evidence and will be in touch if we need any further information.
       </p>
+
+      <br><br><br><br><br><br>
+      <p><a href="email/confirmation">(View confirmation email)</a></p>
+      </div>
     
     </div>
   </div>
