--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/neighbourhood-plan.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/neighbourhood-plan.html
@@ -59,7 +59,10 @@
 
       </form>
 
-    </div>
   </div>
+  <div class="govuk-grid-column-one-third">
+    {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
+  </div>
+</div>
 
 {% endblock %}
