--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/supplementary-delete.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/supplementary-delete.html
@@ -91,8 +91,11 @@
 
       </form>
 
-    </div>
   </div>
+  <div class="govuk-grid-column-one-third">
+    {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
+  </div>
+</div>
 
 {% endblock %}
 
