--- a/app/views/lpa-questionnaire/fullv1/procedure-type/decided-by.html
+++ b/app/views/lpa-questionnaire/fullv1/procedure-type/decided-by.html
@@ -66,7 +66,10 @@
 
       </form>
 
-    </div>
   </div>
+  <div class="govuk-grid-column-one-third">
+    {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
+  </div>
+</div>
 
 {% endblock %}
