--- a/app/views/lpa-questionnaire/fullv1/task-list.html
+++ b/app/views/lpa-questionnaire/fullv1/task-list.html
@@ -16,11 +16,17 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-
+    <div class="govuk-grid-column-full">
+    
       <h1 class="govuk-heading-xl">
         Full planning appeal questionnaire
       </h1>
+    
+    </div>
+  </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
       <!-- Count completed tasks -->
       {% set taskcount = 0 %}
@@ -224,6 +230,9 @@
           </ul>
         </li>
       </ol>
+    </div>
+    <div class="govuk-grid-column-one-third">
+      {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
     </div>
   </div>
 {% endblock %}
