--- a/app/views/lpa-questionnaire/fullv1/your-decision/extra-conditions.html
+++ b/app/views/lpa-questionnaire/fullv1/your-decision/extra-conditions.html
@@ -79,7 +79,10 @@
 
       </form>
 
-    </div>
   </div>
+  <div class="govuk-grid-column-one-third">
+    {% include "lpa-questionnaire/"+version+"/_appeal-details.html" %} 
+  </div>
+</div>
 
 {% endblock %}
