Minor content fixes from green comments in Miro

--- a/app/views/lpa-questionnaire/fullv1/proposed-development/listed-building-details.html
+++ b/app/views/lpa-questionnaire/fullv1/proposed-development/listed-building-details.html
@@ -32,9 +32,9 @@
           Listed building details          
         </h1>
 
-        <p class="govuk-body">
+        <!--p class="govuk-body">
           Tell us about every listed building that's involved in the development. You can add more in the next step.
-        </p>
+        </p-->
 
         {{ govukRadios({
           idPrefix: "lpaq-"+version+"-proposeddevelopment-listedbuildingdetails-grade",
