--- a/app/views/lpa-questionnaire/fullv1/proposed-development/site-plan.html
+++ b/app/views/lpa-questionnaire/fullv1/proposed-development/site-plan.html
@@ -32,9 +32,9 @@
           Site plan
         </h1>
 
-        <p class="govuk-body">
+        <!--p class="govuk-body">
           Upload a plan that shows the location and boundary of the appeal site. 
-        </p>
+        </p-->
         
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-proposeddevelopment-siteplan">
