Content corrections for UR

--- a/app/views/lpa-questionnaire/fullv1/check-your-answers.html
+++ b/app/views/lpa-questionnaire/fullv1/check-your-answers.html
@@ -1005,13 +1005,13 @@
       </dl> 
 
       {{ govukWarningText({
-        text: "By submitting this questionnaire, you confirm that, to the best of your knowledge, the details are correct.",
+        text: "By submitting this questionnaire, you confirm that all details are correct to the best of your knowledge.",
         iconFallbackText: "Warning"
       }) }}
 
       {{ govukButton({
         href: "confirmation",
-        text: "Accept and send"
+        text: "Confirm and submit"
       }) }}
 
     </div>
