--- a/app/views/lpa-questionnaire/fullv1/email/magic-link.html
+++ b/app/views/lpa-questionnaire/fullv1/email/magic-link.html
@@ -19,7 +19,7 @@
       <p>Click this link to confirm your email address and continue to the questionnaire for planning application 21/05058/FUL:</p>
       <p>[<a href="/lpa-questionnaire/fullv1/task-list">valid link</a> <a href="/lpa-questionnaire/fullv1/security/email-link-expired">expired link</a>]</p>
 
-      <p>The link expires after [amount of time].</p>
+      <p>The link expires after 15 minutes.</p>
       <p>Once you've confirmed your email address, you can delete this email.</p><br>
       
       <p>Thank you,</p>
