--- a/app/views/lpa-questionnaire/fullv1/environmental-impact/environmental-statement-details.html
+++ b/app/views/lpa-questionnaire/fullv1/environmental-impact/environmental-statement-details.html
@@ -31,6 +31,13 @@
         <h1 class="govuk-heading-xl">
           Correspondence about the statement
         </h1>
+
+        <p class="govuk-body">
+          Upload any correspondence you have about the adequacy of the environmental information in the statement.
+        </p>
+        <p class="govuk-body">
+          Correspondence can be from both statutory consultees and others.
+        </p>
         
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-environmentalimpact-environmentalstatement-details">
