--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/cil-details.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/cil-details.html
@@ -35,7 +35,7 @@
         
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-localplanspolicies-cil-details">
-            Upload file
+            Upload your community infrastructure levy
           </label>
           <p class="govuk-body">
             Drag and drop a file or select "choose files"
