--- a/app/views/lpa-questionnaire/fullv1/security/sent.html
+++ b/app/views/lpa-questionnaire/fullv1/security/sent.html
@@ -16,7 +16,7 @@
         We've sent an email to {{ data['lpa-'+version+'-account-email'] }}. You need to click the link in the email to confirm your email address.
       </p>
       <p class="govuk-body">
-        The link will expire after [amount of time].
+        The link expires after 15 minutes.
       </p>
       <p class="govuk-body">
         You can close this window.
