--- a/app/views/lpa-questionnaire/fullv1/interested-parties/publicise-application-sitenotice.html
+++ b/app/views/lpa-questionnaire/fullv1/interested-parties/publicise-application-sitenotice.html
@@ -3,7 +3,7 @@
 {% extends "layouts/lpa-questionnaire/fullv1.html" %}
 
 {% block pageTitle %}
-  Site notice and local advertisement? - Tell us how you've informed interested parties - {{serviceName}} - GOV.UK
+  Site notice and local advertisement - Tell us how you've informed interested parties - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -30,7 +30,7 @@
           Tell us how you've informed interested parties
         </span>
         <h1 class="govuk-heading-xl">
-          Site notice and local advertisement?
+          Site notice and local advertisement
         </h1>
         
         <div class="govuk-form-group">
